fix: footer alignment fixed

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -6,6 +6,7 @@
 	background-color: white;
 	padding: 100px;
 	display: flex;
+	justify-content: center;
 	flex-wrap: nowrap;
 	
 }
